--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <a href="./index.html">Go to home</a>
     <input type="text" id="datetime-picker" />
-    <button type="button" data-start>Start</button>
+    <button type="button" data-start class="timer-button">Start</button>
 
     <div class="timer">
       <div class="field">
