--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -9,7 +9,9 @@
   <body>
     <a href="./index.html">Go to home</a>
     <input type="text" id="datetime-picker" />
-    <button type="button" data-start class="timer-button">Start</button>
+    <button disabled type="button" data-start class="timer-button">
+      Start
+    </button>
 
     <div class="timer">
       <div class="field">
