--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -12,7 +12,7 @@
     <form class="form">
       <label>
         Delay (ms)
-        <input type="number" name="delay" required />
+        <input class="delay" type="number" name="delay" required />
       </label>
 
       <fieldset>
@@ -27,7 +27,7 @@
         </label>
       </fieldset>
 
-      <button type="submit">Create notification</button>
+      <button class="create-button" type="submit">Create notification</button>
     </form>
 
     <script type="module" src="./js/2-snackbar.js"></script>
